# portfolio

./: Cargo.toml  Dockerfile  README.md
app/: Cargo.toml  index.html
app/res/: main.css  main.scss  projects.csv
app/src/: app.rs  lib.rs  main.rs
app/src/pages/: contact.rs  does_not_exist.rs  home.rs  mod.rs  not_found.rs  submitted.rs
app/src/pages/home_content/: content_fetcher.rs  default.rs  mod.rs  open_source.rs  projects.rs  resume.rs
server/: Cargo.toml
server/res/: open-source  open-source.csv  open-source.json
server/src/: handle_connection.rs  lib.rs  main.rs
