[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stylist = { version = "0.11.0", features = ["yew", "yew_integration"] }
wasm-bindgen = "0.2.83"
web-sys = "0.3.60"
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "s"
lto = true
