[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.25"
gloo-console = "0.2.3"
reqwest = { version = "0.11.13", features = ["blocking", "json"] }
scraper = "0.14.0"
serde = "1.0.152"
serde-wasm-bindgen = "0.4.5"
serde_json = "1.0.91"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
web-sys = "0.3.60"
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "s"
lto = true
