[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = "3.2.4"
http-body-util = "0.1.0-rc.2"
hyper = { version = "1.0.0-rc.2", features = ["server", "full"] }
octocrab = "0.18.1"
serde = "1.0.152"
serde_json = "1.0.91"
socket2 = "0.4.7"
tokio = { version = "1.23.0", features = ["full"] }

